feed highlight sicks when selected, flickering fixed when moving from detail to search results

--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -56,6 +56,10 @@
   color: rgba(255,82,82,0.87);
 }
 
+.current-feed-tag{
+  color: rgba(255,82,82,0.87);
+}
+
 .quesitons-container{
   overflow: auto;
 }
